# Mini-Project-Python

./: README.md
Blogging-Platform-API/: database.py  main.py  model.py  pyproject.toml
Expense-Tracker-API/: .dockerignore  README.md  docker-compose.yaml  pyproject.toml
Expense-Tracker-API/app/: main.py  schemas.py  security.py
Expense-Tracker-API/app/migrations/: env.py
Expense-Tracker-API/app/migrations/versions/: 0d3f78881027_create_post_table.py  6d3d90ce93f2_create_user_table.py
Expense-Tracker-API/app/repository/: posts.py  users.py
Expense-Tracker-API/app/routers/: auth.py  post.py
Todo-List-API/: README.md  pyproject.toml
Todo-List-API/app/: __init__.py  database.py  main.py  schemas.py  security.py
Todo-List-API/app/alembic/versions/: d48e1b64469b_create_posts_table.py  f07dc92fa3e2_create_users_table.py
Todo-List-API/app/repository/: __init__.py  posts.py  users.py
Todo-List-API/app/routers/: auth.py  post.py  posts.py
